style: fix: 1.13: style modal background solid on mobile

--- a/src/Styles/settings.css
+++ b/src/Styles/settings.css
@@ -526,6 +526,7 @@
     }
 
     & .setting-items.note-toolbar-setting-styles-group {
+        background-color: transparent;
         & .note-toolbar-setting-item-style .setting-item:not(.setting-item-heading)::before {
             border-top: none;
         }
